--- a/Source code/Elysium/Elysium.csproj
+++ b/Source code/Elysium/Elysium.csproj
@@ -191,8 +191,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\Tools and Resources\Assembly dependencies\System.Windows.Interactivity.dll</HintPath>
       <Private>False</Private>
@@ -366,6 +364,7 @@
   <ItemGroup>
     <Compile Include="AccentBrushes.cs" />
     <Compile Include="Controls\CommandButtons\Automation\CommandButtonBaseAutomationPeer.cs" />
+    <Compile Include="Controls\Window\WindowCommands.cs" />
     <Compile Include="Converters\IsGreaterThanConverter.cs" />
     <Compile Include="Extensions\Validation helpers\ContractExtensions.cs" />
     <Compile Include="Extensions\Validation helpers\DoubleUtil.cs" />
@@ -391,16 +390,9 @@
     <Compile Include="Controls\ProgressBars\LinearProgressBar.cs" />
     <Compile Include="Controls\ProgressBars\Primitives\ProgressBarBase.cs" />
     <Compile Include="Controls\ProgressBars\ProgressBarState.cs" />
-    <Compile Include="Notifications\Client\NotificationManager.cs" />
-    <Compile Include="Notifications\HorizontalPlacement.cs" />
-    <Compile Include="Notifications\Animation.cs" />
-    <Compile Include="Notifications\Internal\INotificationManager.cs" />
-    <Compile Include="Notifications\Internal\Notification.cs" />
-    <Compile Include="Notifications\NotificationManager.cs" />
-    <Compile Include="Notifications\VerticalPlacement.cs" />
     <Compile Include="Controls\ToggleSwitch\Automation\ToggleSwitchAutomationPeer.cs" />
     <Compile Include="Controls\ToggleSwitch\ToggleSwitch.cs" />
-    <Compile Include="Controls\Window.cs" />
+    <Compile Include="Controls\Window\Window.cs" />
     <Compile Include="Converters\AngleToCoordinateConverter.cs" />
     <Compile Include="Converters\DoubleToGridLengthConverter.cs" />
     <Compile Include="Converters\DoubleToThicknessConverter.cs" />
@@ -501,15 +493,6 @@
     </None>
     <None Include="Controls\ProgressBars\ProgressBarState.ru.xml">
       <DependentUpon>ProgressBarState.cs</DependentUpon>
-    </None>
-    <None Include="Notifications\Animation.ru.xml">
-      <DependentUpon>Animation.cs</DependentUpon>
-    </None>
-    <None Include="Notifications\HorizontalPlacement.ru.xml">
-      <DependentUpon>HorizontalPlacement.cs</DependentUpon>
-    </None>
-    <None Include="Notifications\VerticalPlacement.ru.xml">
-      <DependentUpon>VerticalPlacement.cs</DependentUpon>
     </None>
     <None Include="Controls\ApplicationBar\Automation\ApplicationBarAutomationPeer.ru.xml">
       <DependentUpon>ApplicationBarAutomationPeer.cs</DependentUpon>
