--- a/Source code/Elysium/Elysium.csproj
+++ b/Source code/Elysium/Elysium.csproj
@@ -181,20 +181,12 @@
       <HintPath>..\..\Tools and Resources\Assembly dependencies\Microsoft.Expression.Drawing.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Microsoft.Expression.Interactions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\Tools and Resources\Assembly dependencies\Microsoft.Expression.Interactions.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="Microsoft.Windows.Shell, Version=3.5.41019.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\Tools and Resources\Assembly dependencies\Microsoft.Windows.Shell.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\Tools and Resources\Assembly dependencies\System.Windows.Interactivity.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="UIAutomationProvider" />
@@ -203,9 +195,6 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="Themes\ApplicationBar\ApplicationBar.xaml">
@@ -415,10 +404,6 @@
     <Compile Include="Theme.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="Documentation\Documentation.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Documentation\en\Elysium.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Elysium.xml</LastGenOutput>
@@ -551,8 +536,16 @@
     <None Include="Controls\ToggleSwitch\ToggleSwitch.ru.xml">
       <DependentUpon>ToggleSwitch.cs</DependentUpon>
     </None>
+    <None Include="Controls\Window\Window.ru.xml">
+      <DependentUpon>Window.cs</DependentUpon>
+    </None>
+    <None Include="Controls\Window\WindowCommands.ru.xml">
+      <DependentUpon>WindowCommands.cs</DependentUpon>
+    </None>
     <None Include="Properties\Key.snk" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
